--- a/TODO
+++ b/TODO
@@ -1,25 +1,27 @@
-☐ 先增加业务对象访问抽象层（供上层使用）
-✔ Design Document @done(20-04-29 18:54)
-✔ Interface Design @done(20-04-29 18:54)
-☐ Test case
-☐ Insert
-☐ Update
-☐ Get
-☐ Find
-☐ Delete
-☐ !连接池 ...
-☐ 超时等异常处理
-☐ 缓存反射元信息，优化性能
-☐ 理解DynamoDB的Session和直接Config的区别
-☐ 超时处理
-☐ 重新建一个仓库，之前提交了不该提交的 test 文件
-☐ types 这个包名感觉容易冲突，
-☐ !如何批量更新满足某个条件的记录
-☐ 返回量Limit，扫描N个还没有找到怎么办？
-☐ 上层数据库字段
-☐ 数据库字段按小写下划线
-☐ 问题：
-    ☐ 1.Dynamo支不支持长连接问题
-    ☐ 2.根据条件同时更新多条记录的问题，批量删除
-    ☐ 3.返回值1M限制？
-    ☐ 4.query缓存设计
+ODM:
+    ✔ Design Document @done(20-04-29 18:54)
+    ✔ Interface Design @done(20-04-29 18:54)
+    ✔ 重新建一个仓库，之前提交了不该提交的 test 文件 @done(20-05-01 15:07)
+    ✔ types 这个包名感觉容易冲突， @done(20-05-01 15:07)
+    Table:
+        ✔ Test case @done(20-05-01 15:07)
+        ✔ Insert @done(20-05-01 15:06)
+        ✔ Update @done(20-05-01 15:06)
+        ✔ Get @done(20-05-01 15:06)
+        ✔ Find @done(20-05-01 15:06)
+        ✔ Delete @done(20-05-01 15:06)
+    DB:
+        ☐ !如何批量更新满足某个条件的记录
+    连接池: @high 
+        ☐ !连接池 ...
+        ☐ 超时等异常处理
+        ☐ 理解DynamoDB的Session和直接Config的区别
+    Schema生成:
+        ☐ 数据库字段按小写下划线
+    易用性接口:
+        ☐ 缓存反射元信息，优化性能
+    问题:
+        ☐ 1.Dynamo支不支持长连接问题
+        ☐ 2.根据条件同时更新多条记录的问题，批量删除
+        ☐ 3.返回值1M限制？
+        ☐ 4.query缓存设计
