--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@ ODM:
     ✔ Interface Design @done(20-04-29 18:54)
     ✔ 重新建一个仓库，之前提交了不该提交的 test 文件 @done(20-05-01 15:07)
     ✔ types 这个包名感觉容易冲突， @done(20-05-01 15:07)
+    ☐ 优化异常处理使用 fmt.Errorf("xxx%w", err) @high 
     Table:
         ✔ Test case @done(20-05-01 15:07)
         ✔ Insert @done(20-05-01 15:06)
@@ -10,9 +11,11 @@ ODM:
         ✔ Get @done(20-05-01 15:06)
         ✔ Find @done(20-05-01 15:06)
         ✔ Delete @done(20-05-01 15:06)
+        ✔ Example @done(20-05-01 19:41)
     DB:
         ☐ !如何批量更新满足某个条件的记录
     连接池: @high 
+        ✔ odm.Open() @done(20-05-01 19:41) @lasted(50s)
         ☐ !连接池 ...
         ☐ 超时等异常处理
         ☐ 理解DynamoDB的Session和直接Config的区别
